[tool.poetry]
name = "clustering_pipelines"
version = "0.1.0"
description = "Project to perform clustering experiments"
authors = ["Nikolay S. Lyudkevich <nikolai.lyudkevich@gmial.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.8.0"
tqdm = "^4.64.1"
pyyaml = "^6.0"
tabulate = "^0.9.0"
scikit-learn = "^1.2.2"
tensorflow = "^2.12.0"
tensorflow-hub = "^0.13.0"
sentence-transformers = "^2.2.2"
umap-learn = "^0.5.3"
tensorflow-text = "^2.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
